--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 /* styles.css */
 
+@media (min-width: 481px) and (max-width: 767px) {
+  
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -14,12 +16,6 @@ header {
     padding: 20px;
     text-align: center;
 }
-@media screen and (max-width: 600px) {
-    .menu-buttons button {
-        font-size: 14px;
-        padding: 8px 16px;
-        margin: 0 5px;
-    }
 
 .menu-buttons {
     display: flex;
@@ -70,5 +66,5 @@ header {
     color: #4CAF50;
     font-weight: bold;
 }
-
+}
 
